Final submission (first for grading)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">NHL Quizz</string>
-    <string name="answer_correct">Correct!</string>
-    <string name="answer_wrong">Try again!</string>
     <string name="game_start">Game is about to start! Are you ready?</string>
     <string name="answer_hint">Type your answer here</string>
-
+    <string name="button_submit">Submit Answer</string>
 </resources>
